  b - fixed possible segfault when finding remaining walltime (if the 
      job's resources haven't been defined)
  e - altered the display of walltime remaining so that the xml produced by
      qstat -f stays consistent. Also updated the man page.
  b - split Cray job library and CSA functionality since CSA is dependant on job
      library but job library is not dependant on CSA

2.4.5
  b - epilogue.user scripts were being run with prologue argments. Fixed
      bug in run_pelog() to include PE_EPILOGUSER so epilogue arguments get
      passed to eplilogue.user script.

  b - Ticket 6665. pbs_mom and job recovery. Fixed a bug where the -q option 
      would terminate running processes as well as requeue jobs. This made the
      -q option the same as the -r option for pbs_mom. -q will now only reque 
      jobs and will not attempt to kill running processes. I also added a -P
      option to start pbs_mom. This is similar to the -p option except the -P
      option will only delete any left over jobs from the queue and will not
      attempt to adopt and running processes.
  e - Modified man page for pbs_mom. Added new -P option plus edited -p, -q
      and -r options to hopefully make them more understandable.
  n - 01/15/2010 created snapshot torque-2.4.5-snap201001151416.tar.gz.
  b - now checks secondary groups (as well as primary) for creating a file
      when spooling.  Before it wouldn't create the spool file if a user had 
      permission through a secondary group.
  b - fixed a file descriptor error with high availability. Before it was possible
      to try to regain a file descriptor which was never held, now this is fixed.
  e - Added the function prepare_child_tasks_for_delete() to src/resmom/solaris5
      /mom_mach.c. This is required for new -P functionality.
  b - updated to a newer gcc and fixed warnings related to disregarded return values.
      Logging was added.