@@ -16,6 +16,12 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       qstat -f stays consistent. Also updated the man page.
   b - split Cray job library and CSA functionality since CSA is dependant on job
       library but job library is not dependant on CSA
+  f - added two server parameters: display_job_server_suffix and job_suffix_alias.
+      The first defaults to true and is whether or not jobs should be appended
+      by .server_name. The second defaults to NULL, but if it is defined it
+      will be appended at the end of the jobid, i.e. jobid.job_suffix_alias.
+  f - added -l option to qstat so that it will display a server name and an
+      alias if both are used. If these aren't used, -l has no effect.
 
 2.4.5
   b - epilogue.user scripts were being run with prologue argments. Fixed
